<resources>
    <string name="app_name">Clean Toilet Locator</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="rating">Toilet Rating</string>

    <string name="nav_header_title">Francis Ntuuwa</string>
    <string name="nav_header_subtitle">francis2wx@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="toilet_title">Toilet Title<font color='#FF0000'>*</font></string>
    <string name="red_star" color="red">*</string>
    <string name="address">Address<font color='#FF0000'>*</font></string>
    <string name="latitude">Latitude<font color='#FF0000'>*</font></string>
    <string name="hint_test">Legal name <font color='#FF0000'>*</font></string>
    <string name="type">Type</string>
    <string name="new_tv"><font color='#127816'>New</font></string>
    <string name="delete_tv"><font color='#D50000'>Delete</font></string>
    <string name="edit_tv"><font color='#1B2E9A'>Edit</font></string>
    <string name="opening_hours">Opening Hours</string>
    <string name="closing_hours">Closing Hours</string>
    <string name="availability_status">Availability Status</string>
    <string name="charge">Charge</string>
    <string name="currency_value">Shs </string>
    <string name="operational_status">Operational Status</string>
    <string name="phone_number">Phone Number</string>
    <string name="suggest_edit">SUGGEST EDIT</string>
    <string name="save">SAVE</string>
    <string name="settings">Settings</string>
    <string name="add_button">add button</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="longitude">Longitude<font color='#FF0000'>*</font></string>
    <string name="extra_info">Other useful Information</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="latest_review">Latest Reviews</string>
    <string name="rating_marker_text">Rating: </string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="username">Username</string>
    <string name="write_your_review">Write Your Review</string>
    <string name="save_review">Save Review</string>
    <string name="distance">Distance</string>
    <string name="distance_value">%1$.2f km</string>
    <string name="snackbar_add_toilet">Long click on a spot on the map to add new toilet</string>

    <string name="map_rationale">We need access to your location to show you toilets near your current location. This data is not stored or shared.</string>
    <string name="location_rationale">We need access to your location to show your location relative to toilets near you. This data is not stored or shared.</string>
    <string name="snackbar_map">Show your location on the map?</string>
    <string name="snackbar_toilets">Show distance to toilets?</string>
    <string name="ok">OK</string>

    <string name="enable_nearby_toilet_notifications">Enable Nearby Toilet Notifications</string>
    <string name="toilets_location_snackbar">Use location to show nearby toilets?</string>
    <string name="toilets_background_snackbar">Allow location when not in use to show nearby toilets?</string>
    <string name="toilets_background_rationale">Using the toilets nearby functionality requires background access to your device\'s location</string>
    <string name="toilets_background_reminder">We use your location even when this app is closed to share nearby toilets</string>
    <string name="notification_channel">Nearby Toilets</string>
    <string name="nearest_toilets_button">Nearest Toilets Button</string>
    <string name="fbmsg">"Firebase Token: "</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">NearBy Toilets</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="division">Division<font color='#FF0000'>*</font></string>

    <string-array name="status">
        <item>operating</item>
        <item>under repair</item>
        <item>closed</item>
    </string-array>

    <string-array name="type">
        <item>public</item>
        <item>private</item>
    </string-array>
    <string name="dummy_button">Close</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>