<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.toilet.ToiletFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/toilet_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout
            tools:viewBindingIgnore="true"
            android:id="@+id/toilet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/medium_padding"
            android:orientation="vertical"
            android:layout_margin="24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/toiletName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/toilet_title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/latitude"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/type"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/openingHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/opening_hours"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/closingHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/closing_hours"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/operational_status"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/charge"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text=""
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnEditToilet"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Official_i3c_color"
                    android:text="Suggest Edit"
                    android:textColor="@color/white"
                    android:layout_marginEnd="@dimen/low_padding"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDeleteToilet"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Official_i3c_color"
                    android:text="DELETE"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textStyle="bold" />
'
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="18sp"
                        android:text="Latest Review" />

                    <ImageButton
                        android:id="@+id/all_review"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/transparent"
                        android:src="@drawable/ic_baseline_preview"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/add_review" />
                    <ImageButton
                        android:id="@+id/add_review"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/transparent"
                        android:src="@drawable/ic_baseline_add"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_toilet0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/low_padding"
                    app:cardElevation="@dimen/low_padding"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/low_padding"
                        android:layout_marginBottom="@dimen/low_padding"
                        android:orientation="horizontal"
                        android:weightSum="100">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="80"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingStart="@dimen/large_padding"
                            android:paddingEnd="@dimen/medium_padding">


                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="User Name"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RatingBar
                                    android:id="@+id/ratingBar1"
                                    style="@style/Widget.AppCompat.RatingBar.Small"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/rating"
                                    android:numStars="5"
                                    android:rating="4"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/tvReviewDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:text="Review Date"
                                    android:textSize="16sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/tvReview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="User Review.................................................................................goes..here..............................................................."
                                android:textSize="14sp" />




                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                    android:id="@+id/listLocations"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--                    tools:itemCount="1"-->
<!--                    tools:listitem="@layout/reviews_list_item" />-->

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</FrameLayout>